--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,14 @@
 version: "3.8"
 services:
   user:
+    image: idkappy/user-service:latest
     build: ./user-service
     ports:
       - "3001:3001"
     restart: unless-stopped
 
   order:
+    image: idkappy/user-service:latest
     build: ./order-service
     ports:
       - "3002:3002"
