--- a/order-service/package.json
+++ b/order-service/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "start": "node app.js",
-    "test": "jest --runInBand"
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest --runInBand"
   },
   "dependencies": {
     "express": "^4.18.2"
